--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!-- saved from url=(0044)file:///C:/Users/Cyril/Documents/mysite.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<link rel="stylesheet" href="mysite_files/mysite.css">
+<link rel="stylesheet" href="index_files/mysite_002.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 
-<link href="mysite_files/css2.css" rel="stylesheet">
+<link rel="stylesheet" href="index_files/css2.css">
 
-<script src="mysite_files/site.js"></script></head><body style="
+<link rel="stylesheet" href="index_files/mysite.css">
+
+mysite.css
+
+<script src="index_files/site.js"></script></head><body style="
     background-color: black;
 ">
     <div style="
@@ -25,7 +29,7 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-" src="mysite_files/IMG_20190904_124449c.jpg">
+" src="index_files/IMG_20190904_124449c.jpg">
 <h2 style="
     color: white;
     font-family: Ultra;
@@ -67,7 +71,7 @@ websites. Has a fully functional in-browser image history menu
 
 
 <img style="
-" src="mysite_files/Screen%20Shot%202024-05-10%20at%2018.45.25.png"></div>
+" src="index_files/Screen%20Shot%202024-05-10%20at%2018.45.25.png"></div>
     </div><div style="
 " class="imgc">
         <div style="width: 100%;"> <h3 style="
@@ -77,7 +81,7 @@ websites. Has a fully functional in-browser image history menu
 
 
 <img style="
-" src="mysite_files/Screenshot%202024-07-24%20at%2017-48-14%20on%20abooru.png"></div>
+" src="index_files/Screenshot%202024-07-24%20at%2017-48-14%20on%20abooru.png"></div>
     </div>
 
 <div style="" class="imgc">
@@ -88,7 +92,7 @@ websites. Has a fully functional in-browser image history menu
  with. I will be moving it to C++, but unfortunately I don't have the time for that right now.</h4>
   
   <div style="width: 33%;margin-right: 3%;overflow: hidden;white-space: nowrap;height: 100%;align-content: center;display: block;">
-   <img src="mysite_files/chronosscr.png" style="display: inline;margin: 0;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);width: 100%;max-height: 100%;"><img src="mysite_files/chronosscr2.png" style="display: inline;margin: 0;width: 100%;max-height: 100%;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);">
+   <img style="display: inline;margin: 0;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);width: 100%;max-height: 100%;" src="index_files/chronosscr.png"><img style="display: inline;margin: 0;width: 100%;max-height: 100%;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);" src="index_files/chronosscr2.png">
   </div>
   </div>
   
@@ -101,7 +105,7 @@ websites. Has a fully functional in-browser image history menu
 ">ToMMovementTweaker</h3><h4 style="
 ">A small tool for changing the movement speed in the 2020 remake of Trials of Mana.</h4>
 
-<img src="mysite_files/1rs.png" style="">
+<img style="" src="index_files/1rs.png">
   </div>
   
   
@@ -121,8 +125,8 @@ inputs within a given window of time &amp;
 sends an output to a different pin depending on how many times the input fired.
 Pretty cool! </h4>
 
-<img src="mysite_files/2018-01-17_02.15.51.png" style="
-"></div>
+<img style="
+" src="index_files/2018-01-17_02.15.51.png"></div>
     </div></div>
     
 </body></html>
