--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!-- saved from url=(0044)file:///C:/Users/Cyril/Documents/mysite.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<link rel="stylesheet" href="index_files/mysite_002.css">
+<link rel="stylesheet" href="mysite_002.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 
-<link rel="stylesheet" href="index_files/css2.css">
+<link rel="stylesheet" href="css2.css">
 
-<link rel="stylesheet" href="index_files/mysite.css">
+<link rel="stylesheet" href="mysite.css">
 
 mysite.css
 
-<script src="index_files/site.js"></script></head><body style="
+<script src="site.js"></script></head><body style="
     background-color: black;
 ">
     <div style="
@@ -29,7 +29,7 @@ mysite.css
     margin-left: auto;
     margin-right: auto;
     display: block;
-" src="index_files/IMG_20190904_124449c.jpg">
+" src="IMG_20190904_124449c.jpg">
 <h2 style="
     color: white;
     font-family: Ultra;
@@ -71,7 +71,7 @@ websites. Has a fully functional in-browser image history menu
 
 
 <img style="
-" src="index_files/Screen%20Shot%202024-05-10%20at%2018.45.25.png"></div>
+" src="Screen%20Shot%202024-05-10%20at%2018.45.25.png"></div>
     </div><div style="
 " class="imgc">
         <div style="width: 100%;"> <h3 style="
@@ -81,7 +81,7 @@ websites. Has a fully functional in-browser image history menu
 
 
 <img style="
-" src="index_files/Screenshot%202024-07-24%20at%2017-48-14%20on%20abooru.png"></div>
+" src="Screenshot%202024-07-24%20at%2017-48-14%20on%20abooru.png"></div>
     </div>
 
 <div style="" class="imgc">
@@ -92,7 +92,7 @@ websites. Has a fully functional in-browser image history menu
  with. I will be moving it to C++, but unfortunately I don't have the time for that right now.</h4>
   
   <div style="width: 33%;margin-right: 3%;overflow: hidden;white-space: nowrap;height: 100%;align-content: center;display: block;">
-   <img style="display: inline;margin: 0;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);width: 100%;max-height: 100%;" src="index_files/chronosscr.png"><img style="display: inline;margin: 0;width: 100%;max-height: 100%;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);" src="index_files/chronosscr2.png">
+   <img style="display: inline;margin: 0;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);width: 100%;max-height: 100%;" src="chronosscr.png"><img style="display: inline;margin: 0;width: 100%;max-height: 100%;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);" src="chronosscr2.png">
   </div>
   </div>
   
@@ -105,7 +105,7 @@ websites. Has a fully functional in-browser image history menu
 ">ToMMovementTweaker</h3><h4 style="
 ">A small tool for changing the movement speed in the 2020 remake of Trials of Mana.</h4>
 
-<img style="" src="index_files/1rs.png">
+<img style="" src="1rs.png">
   </div>
   
   
@@ -126,7 +126,7 @@ sends an output to a different pin depending on how many times the input fired.
 Pretty cool! </h4>
 
 <img style="
-" src="index_files/2018-01-17_02.15.51.png"></div>
+" src="2018-01-17_02.15.51.png"></div>
     </div></div>
     
 </body></html>
