--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!-- saved from url=(0044)file:///C:/Users/Cyril/Documents/mysite.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<link rel="stylesheet" href="mysite_002.css">
+<link rel="stylesheet" href="index_files/mysite_002.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
 
-<link rel="stylesheet" href="css2.css">
+<link rel="stylesheet" href="index_files/css2.css">
 
-<link rel="stylesheet" href="mysite.css">
+<link rel="stylesheet" href="index_files/mysite.css">
 
-mysite.css
-
-<script src="site.js"></script></head><body style="
+</head><body style="
     background-color: black;
-">
+"><script src="index_files/site.js"></script>
     <div style="
     outline: 1px solid red;
 ">
@@ -29,7 +27,8 @@ mysite.css
     margin-left: auto;
     margin-right: auto;
     display: block;
-" src="IMG_20190904_124449c.jpg">
+    border-radius: 130px;
+" src="index_files/IMG_20190904_124449c.jpg">
 <h2 style="
     color: white;
     font-family: Ultra;
@@ -40,24 +39,32 @@ mysite.css
 ">
   
     <div class="button">
-    <div style="">
+    <a href="/home"><div style="">
   <h3 style="color: white;">Home</h3>
-</div></div><div class="button">
-    <div style="">
+  </div></a></div><div class="button">
+    <a href="/software">
+<div style="">
   <h3 style="color: white;">Software Projects</h3>
   </div>
+</a>
 </div><div class="button">
-    <div style="">
+    <a href="/music">
+<div style="">
   <h3 style="color: white;">Music</h3>
 </div>
-</div><div class="button">
-    <div style="">
+</a>
+</div><div class="button" style="display: none;">
+    <a href="/blender">
+<div style="">
   <h3 style="color: white;">Blender</h3>
 </div>
+</a>
 </div><div class="button">
-    <div style="">
+    <a href="/etc">
+<div style="">
   <h3 style="color: white;">etc.</h3>
 </div>
+</a>
 </div></div> </div>
     </div><div style="
 " class="imgc">
@@ -71,7 +78,7 @@ websites. Has a fully functional in-browser image history menu
 
 
 <img style="
-" src="Screen%20Shot%202024-05-10%20at%2018.45.25.png"></div>
+" src="index_files/Screen%20Shot%202024-05-10%20at%2018.45.25.png"></div>
     </div><div style="
 " class="imgc">
         <div style="width: 100%;"> <h3 style="
@@ -81,7 +88,7 @@ websites. Has a fully functional in-browser image history menu
 
 
 <img style="
-" src="Screenshot%202024-07-24%20at%2017-48-14%20on%20abooru.png"></div>
+" src="index_files/Screenshot%202024-07-24%20at%2017-48-14%20on%20abooru.png"></div>
     </div>
 
 <div style="" class="imgc">
@@ -92,7 +99,7 @@ websites. Has a fully functional in-browser image history menu
  with. I will be moving it to C++, but unfortunately I don't have the time for that right now.</h4>
   
   <div style="width: 33%;margin-right: 3%;overflow: hidden;white-space: nowrap;height: 100%;align-content: center;display: block;">
-   <img style="display: inline;margin: 0;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);width: 100%;max-height: 100%;" src="chronosscr.png"><img style="display: inline;margin: 0;width: 100%;max-height: 100%;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);" src="chronosscr2.png">
+   <img style="display: inline;margin: 0;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);width: 100%;max-height: 100%;" src="index_files/chronosscr.png"><img style="display: inline;margin: 0;width: 100%;max-height: 100%;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);" src="index_files/chronosscr2.png">
   </div>
   </div>
   
@@ -105,7 +112,7 @@ websites. Has a fully functional in-browser image history menu
 ">ToMMovementTweaker</h3><h4 style="
 ">A small tool for changing the movement speed in the 2020 remake of Trials of Mana.</h4>
 
-<img style="" src="1rs.png">
+<img style="" src="index_files/1rs.png">
   </div>
   
   
@@ -126,7 +133,7 @@ sends an output to a different pin depending on how many times the input fired.
 Pretty cool! </h4>
 
 <img style="
-" src="2018-01-17_02.15.51.png"></div>
+" src="index_files/2018-01-17_02.15.51.png"></div>
     </div></div>
     
 </body></html>
