--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     margin-right: auto;
     display: block;
     border-radius: 130px;
-" src="index_files/IMG_20190904_124449c.jpg">
+" src="index_files/44797228.jpg">
 <h2 style="
     color: white;
     font-family: Ultra;
