--- a/index.html
+++ b/index.html
@@ -96,8 +96,7 @@ websites. Has a fully functional in-browser image history menu
   <div>
   <h3 style="
 ">Chronos</h3><h4 style="
-">A backup tool that I've had to put off because C#/WPF has proven too finicky &amp; difficult for me to work
- with. I will be moving it to C++, but unfortunately I don't have the time for that right now.</h4>
+">An unfinished backup tool, written in C#/WPF. </h4>
   
   <div style="width: 33%;margin-right: 3%;overflow: hidden;white-space: nowrap;height: 100%;align-content: center;display: block;">
    <img style="display: inline;margin: 0;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);width: 100%;max-height: 100%;" src="index_files/chronosscr.png"><img style="display: inline;margin: 0;width: 100%;max-height: 100%;margin-left: 0;transition: margin-left 0.5s cubic-bezier(.77,0,.18,1);" src="index_files/chronosscr2.png">
@@ -125,13 +124,9 @@ websites. Has a fully functional in-browser image history menu
     
 <h3 style="
 ">Output Determiner circuit</h3><h4 style="
-">This is a circuit built and designed in minecraft many years ago. I 
-wasn't really sure what this was when I was building it. It's actually 
-more of a protocol than anything, and it can be done with a 
-microcontroller or something pretty easily so you may not often see a circuit for this. What it does is receive a number of 
+">This is a circuit built and designed in minecraft many years ago. It receives a number of 
 inputs within a given window of time &amp; 
-sends an output to a different pin depending on how many times the input fired.
-Pretty cool! </h4>
+sends an output to a different pin depending on how many times the input fired. Pretty cool!</h4>
 
 <img style="
 " src="index_files/2018-01-17_02.15.51.png"></div>
